--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,55 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+@inproceedings{chen2020self,
+  title={Self-pu: Self boosted and calibrated positive-unlabeled training},
+  author={Chen, Xuxi and Chen, Wuyang and Chen, Tianlong and Yuan, Ye and Gong, Chen and Chen, Kewei and Wang, Zhangyang},
+  booktitle={International Conference on Machine Learning},
+  pages={1510--1519},
+  year={2020},
+  organization={PMLR},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{chen2020gans,
+  title={GANs Can Play Lottery Tickets Too},
+  author={Chen, Xuxi and Zhang, Zhenyu and Sui, Yongduo and Chen, Tianlong},
+  booktitle={International Conference on Learning Representations},
+  year={2020},
+  selected={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{chen2021unified,
+  title={A unified lottery ticket hypothesis for graph neural networks},
+  author={Chen, Tianlong and Sui, Yongduo and Chen, Xuxi and Zhang, Aston and Wang, Zhangyang},
+  booktitle={International Conference on Machine Learning},
+  pages={1695--1706},
+  year={2021},
+  organization={PMLR}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{zhang2021efficient,
+  title={Efficient lottery ticket finding: Less data is more},
+  author={Zhang, Zhenyu and Chen, Xuxi and Chen, Tianlong and Wang, Zhangyang},
+  booktitle={International Conference on Machine Learning},
+  pages={12380--12390},
+  year={2021},
+  organization={PMLR},
+  selected={true}
+}
+
+@article{ma2021sanity,
+  title={Sanity Checks for Lottery Tickets: Does Your Winning Ticket Really Win the Jackpot?},
+  author={Ma, Xiaolong and Yuan, Geng and Shen, Xuan and Chen, Tianlong and Chen, Xuxi and Chen, Xiaohan and Liu, Ning and Qin, Minghai and Liu, Sijia and Wang, Zhangyang and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  year={2021}
+}
+
+@article{chen2021you,
+  title={You are caught stealing my winning lottery ticket! Making a lottery ticket claim its ownership},
+  author={Chen, Xuxi and Chen, Tianlong and Zhang, Zhenyu and Wang, Zhangyang},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  year={2021}
 }
