--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,3 +53,24 @@
   volume={34},
   year={2021}
 }
+
+@article{chen2022coarsening,
+  title={Coarsening the granularity: Towards structurally sparse lottery tickets},
+  author={Chen, Tianlong and Chen, Xuxi and Ma, Xiaolong and Wang, Yanzhi and Wang, Zhangyang},
+  journal={International Conference on Machine Learning},
+  year={2022}
+}
+
+@article{zi2022,
+  title={DnA: Improving Few-shot Transfer Learning with Low-Rank Decomposition and Alignment},
+  author={Jiang, Ziyu and Chen, Tianlong and Chen, Xuxi and Cheng, Yu and Zhuo, Luowei and Yuan, Lu and Awadallah, Ahmed and Wang, Zhangyang},
+  journal={European Conference on Computer Vision},
+  year={2022}
+}
+
+@article{chen2022sc,
+  title={Scalable Learning to Optimize: A Learned Optimizer Can Train Big Models},
+  author={Chen, Xuxi and Chen, Tianlong and Cheng, Yu and Chen, Weizhu and Awadallah, Ahmed and Wang, Zhangyang},
+  journal={European Conference on Computer Vision},
+  year={2022}
+}
