--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,8 @@
   booktitle={International Conference on Machine Learning},
   pages={1695--1706},
   year={2021},
-  organization={PMLR}
+  organization={PMLR},
+  selected={true}
 }
 
 @inproceedings{zhang2021efficient,
@@ -43,7 +44,8 @@
   author={Ma, Xiaolong and Yuan, Geng and Shen, Xuan and Chen, Tianlong and Chen, Xuxi and Chen, Xiaohan and Liu, Ning and Qin, Minghai and Liu, Sijia and Wang, Zhangyang and others},
   journal={Advances in Neural Information Processing Systems},
   volume={34},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @article{chen2021you,
@@ -51,26 +53,30 @@
   author={Chen, Xuxi and Chen, Tianlong and Zhang, Zhenyu and Wang, Zhangyang},
   journal={Advances in Neural Information Processing Systems},
   volume={34},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @article{chen2022coarsening,
   title={Coarsening the granularity: Towards structurally sparse lottery tickets},
   author={Chen, Tianlong and Chen, Xuxi and Ma, Xiaolong and Wang, Yanzhi and Wang, Zhangyang},
   journal={International Conference on Machine Learning},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 
 @article{zi2022,
   title={DnA: Improving Few-shot Transfer Learning with Low-Rank Decomposition and Alignment},
   author={Jiang, Ziyu and Chen, Tianlong and Chen, Xuxi and Cheng, Yu and Zhuo, Luowei and Yuan, Lu and Awadallah, Ahmed and Wang, Zhangyang},
   journal={European Conference on Computer Vision},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 
 @article{chen2022sc,
   title={Scalable Learning to Optimize: A Learned Optimizer Can Train Big Models},
   author={Chen, Xuxi and Chen, Tianlong and Cheng, Yu and Chen, Weizhu and Awadallah, Ahmed and Wang, Zhangyang},
   journal={European Conference on Computer Vision},
-  year={2022}
+  year={2022},
+  selected={true}
 }
