--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,31 @@
 ---
 ---
+@misc{https://doi.org/10.48550/arxiv.2207.13298,
+  doi = {10.48550/ARXIV.2207.13298},
+  
+  url = {https://arxiv.org/abs/2207.13298},
+  
+  author = {T, Mukund Varma and Wang, Peihao and Chen, Xuxi and Chen, Tianlong and Venugopalan, Subhashini and Wang, Zhangyang},
+  
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Is Attention All NeRF Needs?},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  selected={true},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{liu2022more,
+  title={More ConvNets in the 2020s: Scaling up Kernels Beyond 51x51 using Sparsity},
+  author={Liu, Shiwei and Chen, Tianlong and Chen, Xiaohan and Chen, Xuxi and Xiao, Qiao and Wu, Boqian and Pechenizkiy, Mykola and Mocanu, Decebal and Wang, Zhangyang},
+  journal={arXiv preprint arXiv:2207.03620},
+  year={2022},
+  selected={true}
+}
+
 @article{chen2022sc,
   title={Scalable Learning to Optimize: A Learned Optimizer Can Train Big Models},
   author={Chen, Xuxi and Chen, Tianlong and Cheng, Yu and Chen, Weizhu and Awadallah, Ahmed and Wang, Zhangyang},
@@ -21,6 +47,14 @@
   author={Chen, Tianlong and Chen, Xuxi and Ma, Xiaolong and Wang, Yanzhi and Wang, Zhangyang},
   journal={International Conference on Machine Learning},
   year={2022},
+  selected={true}
+}
+
+@article{chen2021dsee,
+  title={DSEE: Dually Sparsity-embedded Efficient Tuning of Pre-trained Language Models},
+  author={Chen, Xuxi and Chen, Tianlong and Cheng, Yu and Chen, Weizhu and Wang, Zhangyang and Awadallah, Ahmed Hassan},
+  journal={arXiv preprint arXiv:2111.00160},
+  year={2021},
   selected={true}
 }
 
