--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,29 +1,64 @@
 ---
 ---
-@misc{https://doi.org/10.48550/arxiv.2207.13298,
-  doi = {10.48550/ARXIV.2207.13298},
-  
-  url = {https://arxiv.org/abs/2207.13298},
-  
-  author = {T, Mukund Varma and Wang, Peihao and Chen, Xuxi and Chen, Tianlong and Venugopalan, Subhashini and Wang, Zhangyang},
-  
-  keywords = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  
-  title = {Is Attention All NeRF Needs?},
-  
-  publisher = {arXiv},
-  
-  year = {2022},
-  selected={true},
-  copyright = {arXiv.org perpetual, non-exclusive license}
+
+@inproceedings{chen2023cross,
+  title={Cross-Quality Few-Shot Transfer for Alloy Yield Strength Prediction: A New Material Science Benchmark and An Integrated Optimization Framework},
+  author={Chen, Xuxi and Chen, Tianlong and Olivares, Everardo Yeriel and Elder, Kate and McCall, Scott and Perron, Aurelien and McKeown, Joseph and Kailkhura, Bhavya and Wang, Zhangyang and Gallagher, Brian},
+  booktitle={Workshop on''Machine Learning for Materials''ICLR 2023},
+  year={2023}
 }
 
-@article{liu2022more,
+@inproceedings{liu2022more,
   title={More ConvNets in the 2020s: Scaling up Kernels Beyond 51x51 using Sparsity},
-  author={Liu, Shiwei and Chen, Tianlong and Chen, Xiaohan and Chen, Xuxi and Xiao, Qiao and Wu, Boqian and Pechenizkiy, Mykola and Mocanu, Decebal and Wang, Zhangyang},
-  journal={arXiv preprint arXiv:2207.03620},
-  year={2022},
-  selected={true}
+  author={Liu, Shiwei and Chen, Tianlong and Chen, Xiaohan and Chen, Xuxi and Xiao, Qiao and Wu, Boqian and K{\"a}rkk{\"a}inen, Tommi and Pechenizkiy, Mykola and Mocanu, Decebal Constantin and Wang, Zhangyang},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
+@inproceedings{yang2022m,
+  title={M-L2O: Towards Generalizable Learning-to-Optimize by Test-Time Fast Self-Adaptation},
+  author={Yang, Junjie and Chen, Xuxi and Chen, Tianlong and Wang, Zhangyang and Liang, Yingbin},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
+@inproceedings{liu2022sparsity,
+  title={Sparsity May Cry: Let Us Fail (Current) Sparse Neural Networks Together!},
+  author={Liu, Shiwei and Chen, Tianlong and Zhang, Zhenyu and Chen, Xuxi and Huang, Tianjin and JAISWAL, AJAY KUMAR and Wang, Zhangyang},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
+@inproceedings{chen2022hotprotein,
+  title={Hotprotein: A novel framework for protein thermostability prediction and editing},
+  author={Chen, Tianlong and Gong, Chengyue and Diaz, Daniel Jesus and Chen, Xuxi and Wells, Jordan Tyler and Wang, Zhangyang and Ellington, Andrew and Dimakis, Alex and Klivans, Adam and others},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
+@inproceedings{varma2022attention,
+  title={Is Attention All That NeRF Needs?},
+  author={Varma, Mukund and Wang, Peihao and Chen, Xuxi and Chen, Tianlong and Venugopalan, Subhashini and Wang, Zhangyang},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
+@article{varma2022sparse,
+  title={Sparse Winning Tickets are Data-Efficient Image Recognizers},
+  author={Varma T, Mukund and Chen, Xuxi and Zhang, Zhenyu and Chen, Tianlong and Venugopalan, Subhashini and Wang, Zhangyang},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={4652--4666},
+  year={2022}
+}
+
+@article{jiang2022back,
+  title={Back razor: Memory-efficient transfer learning by self-sparsified backpropagation},
+  author={Jiang, Ziyu and Chen, Xuxi and Huang, Xueqin and Du, Xianzhi and Zhou, Denny and Wang, Zhangyang},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={29248--29261},
+  year={2022}
 }
 
 @article{chen2022sc,
@@ -52,9 +87,9 @@
 
 @article{chen2021dsee,
   title={DSEE: Dually Sparsity-embedded Efficient Tuning of Pre-trained Language Models},
-  author={Chen, Xuxi and Chen, Tianlong and Cheng, Yu and Chen, Weizhu and Wang, Zhangyang and Awadallah, Ahmed Hassan},
-  journal={arXiv preprint arXiv:2111.00160},
-  year={2021},
+  author={Chen, Xuxi and Chen, Tianlong and Chen, Weizhu and Awadallah, Ahmed Hassan and Wang, Zhangyang and Cheng, Yu},
+  journal={ACL 2023},
+  year={2023},
   selected={true}
 }
 
