--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@inproceedings{chen2023,
+  title={Learning to Optimize Differentiable Games},
+  author={Chen, Xuxi and Vadori, Nelson and Chen, Tianlnog and Wang, Zhangyang},
+  booktitle={International Conference on Machine Learning},
+  year={2023},
+  selected={true}
+}
+
 @inproceedings{chen2023cross,
   title={Cross-Quality Few-Shot Transfer for Alloy Yield Strength Prediction: A New Material Science Benchmark and An Integrated Optimization Framework},
   author={Chen, Xuxi and Chen, Tianlong and Olivares, Everardo Yeriel and Elder, Kate and McCall, Scott and Perron, Aurelien and McKeown, Joseph and Kailkhura, Bhavya and Wang, Zhangyang and Gallagher, Brian},
