--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,9 @@
 ---
 ---
 
-@inproceedings{chen2023,
+@inproceedings{chen2023l2o,
   title={Learning to Optimize Differentiable Games},
-  author={Chen, Xuxi and Vadori, Nelson and Chen, Tianlnog and Wang, Zhangyang},
+  author={Chen, Xuxi and Vadori, Nelson and Chen, Tianlong and Wang, Zhangyang},
   booktitle={International Conference on Machine Learning},
   year={2023},
   selected={true}
