--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@inproceedings{chen2023adamv,
+  title={AdaMV-MoE: Adaptive Multi-Task Vision Mixture-of-Experts},
+  author={Chen, Tianlong and Chen, Xuxi and Du, Xianzhi and Rashwan, Abdullah and Yang, Fan and Chen, Huizhong and Wang, Zhangyang and Li, Yeqing},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={17346--17357},
+  year={2023},
+}
+
 @inproceedings{chen2023l2o,
   title={Learning to Optimize Differentiable Games},
   author={Chen, Xuxi and Vadori, Nelson and Chen, Tianlong and Wang, Zhangyang},
