--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 @inproceedings{chen2023cross,
   title={Cross-Quality Few-Shot Transfer for Alloy Yield Strength Prediction: A New Material Science Benchmark and An Integrated Optimization Framework},
   author={Chen, Xuxi and Chen, Tianlong and Olivares, Everardo Yeriel and Elder, Kate and McCall, Scott and Perron, Aurelien and McKeown, Joseph and Kailkhura, Bhavya and Wang, Zhangyang and Gallagher, Brian},
-  booktitle={Workshop on''Machine Learning for Materials''ICLR 2023},
+  booktitle={ICLR Workshop on Machine Learning for Materials},
   year={2023},
   selected={true}
 }
@@ -28,14 +28,14 @@
 @inproceedings{liu2022more,
   title={More ConvNets in the 2020s: Scaling up Kernels Beyond 51x51 using Sparsity},
   author={Liu, Shiwei and Chen, Tianlong and Chen, Xiaohan and Chen, Xuxi and Xiao, Qiao and Wu, Boqian and K{\"a}rkk{\"a}inen, Tommi and Pechenizkiy, Mykola and Mocanu, Decebal Constantin and Wang, Zhangyang},
-  booktitle={The Eleventh International Conference on Learning Representations},
+  booktitle={International Conference on Learning Representations},
   year={2022}
 }
 
 @inproceedings{yang2022m,
   title={M-L2O: Towards Generalizable Learning-to-Optimize by Test-Time Fast Self-Adaptation},
   author={Yang, Junjie and Chen, Xuxi and Chen, Tianlong and Wang, Zhangyang and Liang, Yingbin},
-  booktitle={The Eleventh International Conference on Learning Representations},
+  booktitle={International Conference on Learning Representations},
   year={2022},
   selected={true}
 }
@@ -43,7 +43,7 @@
 @inproceedings{liu2022sparsity,
   title={Sparsity May Cry: Let Us Fail (Current) Sparse Neural Networks Together!},
   author={Liu, Shiwei and Chen, Tianlong and Zhang, Zhenyu and Chen, Xuxi and Huang, Tianjin and JAISWAL, AJAY KUMAR and Wang, Zhangyang},
-  booktitle={The Eleventh International Conference on Learning Representations},
+  booktitle={International Conference on Learning Representations},
   year={2022},
   selected={true}
 }
@@ -51,7 +51,7 @@
 @inproceedings{chen2022hotprotein,
   title={Hotprotein: A novel framework for protein thermostability prediction and editing},
   author={Chen, Tianlong and Gong, Chengyue and Diaz, Daniel Jesus and Chen, Xuxi and Wells, Jordan Tyler and Wang, Zhangyang and Ellington, Andrew and Dimakis, Alex and Klivans, Adam and others},
-  booktitle={The Eleventh International Conference on Learning Representations},
+  booktitle={International Conference on Learning Representations},
   year={2022},
   selected={true}
 }
@@ -109,7 +109,7 @@
 @article{chen2021dsee,
   title={DSEE: Dually Sparsity-embedded Efficient Tuning of Pre-trained Language Models},
   author={Chen, Xuxi and Chen, Tianlong and Chen, Weizhu and Awadallah, Ahmed Hassan and Wang, Zhangyang and Cheng, Yu},
-  journal={ACL 2023},
+  journal={Annual Meeting of the Association for Computational Linguistics},
   year={2023},
   selected={true}
 }
